# opencv-sudoku-solver

./: .gitignore  README.md  pyproject.toml  requirements.txt
digit-training/: digit_cnn_test.ipynb  digit_cnn_test.py  digit_cnn_trainning.ipynb  generate_digit.ipynb  model_trained.p
sudoku-solver/: sudoku_image.ipynb  sudoku_video.py
sudoku-solver/others/: digit_cnn_camera_with_number.py
sudoku-solver/utils/: helpers.py
